--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -28,12 +28,36 @@
             android:layout_alignParentStart="true" />
 
         <TextView
+            android:id="@+id/tv_want"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_6"
             android:layout_toRightOf="@id/iv_want"
             android:text="想去"
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/dp_14" />
+
+        <ImageView
+            android:id="@+id/iv_share"
+            android:layout_width="@dimen/dp_25"
+            android:layout_height="@dimen/dp_25"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_toRightOf="@id/tv_want"
+            android:src="@drawable/icon_share"
+            android:layout_centerVertical="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_2"
+            android:layout_toRightOf="@id/iv_share"
+            android:text="分享"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/dp_14" />
 
