--- a/app/src/main/res/layout/listview_item_member_works_project.xml
+++ b/app/src/main/res/layout/listview_item_member_works_project.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dp_15"
+    android:paddingTop="@dimen/dp_15"
+    android:paddingLeft="@dimen/dp_15"
+    android:paddingRight="@dimen/dp_15"
     android:background="@drawable/selector_bg_layout_item">
 
     <RelativeLayout
@@ -46,32 +48,39 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
         android:textSize="@dimen/sp_14"
-        android:textColor="@color/color_333333" />
+        android:textColor="@color/color_666666" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="进度"
             android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14"
-            android:text="进度"/>
+            android:textSize="@dimen/sp_14" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
             android:orientation="vertical">
+
             <ProgressBar
                 android:id="@+id/progress"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_3"
+                android:layout_height="@dimen/dp_8"
+                android:secondaryProgress="100"
+                android:progressDrawable="@drawable/progress_indeterminate_horizontal"
                 android:max="100" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/tv_focus_count"
                     android:layout_width="wrap_content"
@@ -79,17 +88,17 @@
                     android:layout_marginTop="@dimen/dp_10"
                     android:text="关注"
                     android:textColor="@color/color_666666"
-                    android:textSize="@dimen/sp_14"/>
+                    android:textSize="@dimen/sp_14" />
 
                 <TextView
                     android:id="@+id/tv_applied_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
                     android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/dp_10"
                     android:text="报名"
                     android:textColor="@color/color_666666"
-                    android:textSize="@dimen/sp_14"/>
+                    android:textSize="@dimen/sp_14" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
@@ -100,8 +109,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_15">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_state_label"
             android:layout_width="wrap_content"
@@ -118,6 +126,34 @@
             android:layout_centerVertical="true"
             android:gravity="right|center_vertical">
             <Button
+                android:id="@+id/btn_works"
+                android:layout_width="wrap_content"
+                style="@style/lesser_corners_btn"
+                android:textSize="@dimen/sp_14"
+                android:layout_height="@dimen/dp_30"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:layout_margin="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_20"
+                android:paddingRight="@dimen/dp_20"
+                android:text="作品"/>
+
+            <Button
+                android:id="@+id/btn_teams"
+                android:layout_width="wrap_content"
+                style="@style/lesser_corners_btn"
+                android:textSize="@dimen/sp_14"
+                android:layout_height="@dimen/dp_30"
+                android:minHeight="0dp"
+                android:layout_marginRight="@dimen/dp_15"
+                android:minWidth="0dp"
+                android:visibility="gone"
+                android:paddingLeft="@dimen/dp_20"
+                android:paddingRight="@dimen/dp_20"
+                android:text="团队"/>
+
+            <Button
+                android:id="@+id/btn_detail"
                 android:layout_width="wrap_content"
                 style="@style/lesser_corners_btn"
                 android:textSize="@dimen/sp_14"
