--- a/app/src/main/res/layout/activity_project_work_detail.xml
+++ b/app/src/main/res/layout/activity_project_work_detail.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.com.mangopi.android.ui.activity.ProjectWorkDetailActivity">
+    android:fillViewport="true">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_project_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_15"
+        android:textColor="@color/color_333333"
+        android:textSize="@dimen/sp_16"/>
+
+</ScrollView>
