--- a/app/src/main/res/layout/listview_item_interact_area.xml
+++ b/app/src/main/res/layout/listview_item_interact_area.xml
@@ -24,8 +24,7 @@
             <cn.com.mangopi.android.ui.widget.RoundImageView xmlns:round="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/dp_49"
-                android:layout_height="@dimen/dp_49"
-                android:src="@mipmap/logo" />
+                android:layout_height="@dimen/dp_49" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -54,6 +53,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/dp_6"
                         android:textSize="@dimen/sp_14"
+                        android:visibility="gone"
                         android:textColor="@color/color_666666"/>
 
                     <ImageView
@@ -63,12 +63,14 @@
                         android:layout_marginLeft="@dimen/dp_10"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
+                        android:visibility="gone"
                         android:src="@drawable/icon_like_nor" />
                     <TextView
                         android:id="@+id/tv_praise_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:visibility="gone"
                         android:textSize="@dimen/sp_14"
                         android:layout_marginLeft="@dimen/dp_6"
                         android:textColor="@color/color_666666"/>
@@ -107,6 +109,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_14" />
+
+        <TextView
+            android:id="@+id/tv_reply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_20"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
 
