--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -98,7 +98,6 @@
                 android:id="@+id/tv_forward_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp_10"
                 android:layout_marginLeft="@dimen/dp_15"
                 android:layout_marginRight="@dimen/dp_15"
                 android:textColor="@color/color_666666"
@@ -110,6 +109,7 @@
                 android:layout_height="@dimen/dp_160"
                 android:layout_marginLeft="@dimen/dp_15"
                 android:layout_marginRight="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_10"
                 android:adjustViewBounds="true"
                 android:visibility="gone"
                 android:layout_gravity="left"/>
@@ -119,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:numColumns="3"
+                android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginLeft="@dimen/dp_15"
                 android:layout_marginRight="@dimen/dp_15"
                 android:horizontalSpacing="@dimen/dp_5"
