--- a/app/src/main/res/layout/activity_order_schedule_calendar.xml
+++ b/app/src/main/res/layout/activity_order_schedule_calendar.xml
@@ -86,8 +86,7 @@
                 android:textSize="@dimen/sp_14"
                 android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/dp_15"
-                android:text="选择上课时间"/>
+                android:layout_marginTop="@dimen/dp_15"/>
 
             <cn.com.mangopi.android.ui.widget.GridView
                 android:id="@+id/gv_sct_time"
