--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -281,6 +281,33 @@
             <View
                 style="@style/horizontal_line"/>
 
+            <TextView
+                android:id="@+id/tv_project_team"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:text="报名团队"
+                android:visibility="gone"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_16"/>
+
+            <cn.com.mangopi.android.ui.widget.ListView
+                android:id="@+id/lv_project_team"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_15" />
+
+            <View
+                android:id="@+id/line_project_team"
+                android:layout_marginTop="@dimen/dp_15"
+                android:visibility="gone"
+                style="@style/horizontal_line"/>
+
             <LinearLayout
                 android:id="@+id/layout_courses"
                 android:visibility="gone"
