--- a/app/src/main/res/layout/listview_item_member_works_project.xml
+++ b/app/src/main/res/layout/listview_item_member_works_project.xml
@@ -53,11 +53,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_15">
+        android:layout_marginTop="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
             android:text="进度"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
@@ -68,18 +69,36 @@
             android:layout_marginLeft="@dimen/dp_10"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_progress"
+                android:layout_width="34dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_4"
+                android:background="@drawable/icon_bu"
+                android:gravity="center_horizontal"
+                android:paddingBottom="@dimen/dp_6"
+                android:paddingLeft="@dimen/dp_4"
+                android:paddingRight="@dimen/dp_4"
+                android:paddingTop="@dimen/dp_2"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_10" />
+
             <ProgressBar
                 android:id="@+id/progress"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_8"
-                android:secondaryProgress="100"
+                android:layout_marginLeft="@dimen/dp_17"
+                android:layout_marginRight="@dimen/dp_17"
+                android:max="100"
                 android:progressDrawable="@drawable/progress_indeterminate_horizontal"
-                android:max="100" />
+                android:secondaryProgress="100" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_17"
+                android:layout_marginRight="@dimen/dp_17">
 
                 <TextView
                     android:id="@+id/tv_focus_count"
