--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_15">15dp</dimen>
+    <dimen name="dp_17">17dp</dimen>
     <dimen name="dp_31">31dp</dimen>
     <dimen name="dp_112">112dp</dimen>
     <dimen name="dp_49">49dp</dimen>
