--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_5">5dp</dimen>
+    <dimen name="dp_18">18dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_27">27dp</dimen>
     <dimen name="dp_50">50dp</dimen>
