--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -80,6 +80,7 @@
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginLeft="@dimen/dp_15"
             android:layout_marginRight="@dimen/dp_15"
+            android:lineSpacingExtra="@dimen/dp_2"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
 
@@ -100,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_15"
                 android:layout_marginRight="@dimen/dp_15"
+                android:lineSpacingExtra="@dimen/dp_2"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_14" />
 
