--- a/app/src/main/res/layout/listview_item_search_result.xml
+++ b/app/src/main/res/layout/listview_item_search_result.xml
@@ -16,16 +16,32 @@
             android:layout_height="@dimen/dp_50"
             android:src="@mipmap/logo" />
 
-        <TextView
-            android:id="@+id/tv_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_666666"
             android:layout_marginLeft="@dimen/dp_10"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textSize="@dimen/sp_16" />
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
+
+            <TextView
+                android:id="@+id/tv_intro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp_14" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <View
