--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -273,6 +273,7 @@
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp_14"
                 android:paddingRight="@dimen/dp_15"
+                android:paddingBottom="@dimen/dp_15"
                 android:paddingLeft="@dimen/dp_15"
                 android:visibility="gone"/>
 
