--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -19,6 +19,7 @@
             android:adjustViewBounds="true"
             android:layout_marginLeft="@dimen/dp_15"
             android:scaleType="centerInside"
+            android:src="@drawable/faxian_xiangting"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -226,6 +227,7 @@
                 android:layout_marginTop="@dimen/dp_15"/>
 
             <TextView
+                android:id="@+id/tv_explains_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="【特别说明】"
@@ -245,7 +247,9 @@
                 android:paddingRight="@dimen/dp_15"
                 android:textSize="@dimen/sp_14" />
 
-            <View style="@style/margin_horizontal_line"
+            <View
+                android:id="@+id/line_explains"
+                style="@style/margin_horizontal_line"
                 android:layout_marginTop="@dimen/dp_15"/>
         </LinearLayout>
 
