--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -92,7 +92,7 @@
             <ImageView
                 android:id="@+id/iv_logo"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_180"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop" />
 
