--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <paths>
-        <external-path
-            name="external"
-            path="" />
-        <files-path
-            name="files"
-            path="" />
-        <cache-path
-            name="cache"
-            path="" />
-    </paths>
-</resources>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <root-path name="root_path" path="." />
+    <files-path name="files-path" path="." />
+    <cache-path name="cache-path" path="." />
+    <external-path name="external_files" path="."/>
+    <external-files-path name="external-files-path" path="." />
+    <external-cache-path name="external-cache-path" path="." />
+</paths>
